# roosevelt

./: .gitignore  CMakeLists.txt  README.md  astyle  doxyfile  premake4.lua
core/: CMakeLists.txt
core/include/: BaseComponent.h  ComponentType.h  Entity.h  EntityComponent.h  EntityContainer.h  EntitySystem.h  IComponent.h  IEntitySystem.h  MoverSystem.h  PositionComponent.h  PrinterSystem.h  doprint.h
core/private_include/: pdoprint.h
core/src/: BaseComponent.cpp  Entity.cpp  EntityComponent.cpp  EntityContainer.cpp  MoverSystem.cpp  PositionComponent.cpp  PrinterSystem.cpp  doprint.cpp
core/test/: CMakeLists.txt
core/test/src/: EntityContainerTest.cpp  EntityTest.cpp  testUnitTest.cpp
linux/src/: roosevelt.cpp
roosevelt/: CMakeLists.txt
roosevelt/include/: IRenderer.h  MoverSystem.h  PositionComponent.h  PrinterSystem.h  RenderComponent.h  RenderSystem.h
roosevelt/src/: PositionComponent.cpp  PrinterSystem.cpp  RenderComponent.cpp  RenderSystem.cpp
sdl/include/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config.h  SDL_config_android.h  SDL_config_iphoneos.h  SDL_config_macosx.h  SDL_config_minimal.h  SDL_config_nintendods.h  SDL_config_pandora.h  SDL_config_windows.h  SDL_config_wiz.h  SDL_cpuinfo.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_gesture.h  SDL_haptic.h  SDL_hints.h  SDL_input.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  SDL_log.h  SDL_main.h  SDL_mouse.h  SDL_mutex.h  SDL_opengl.h  SDL_opengles.h  SDL_opengles2.h  SDL_pixels.h  SDL_platform.h  SDL_power.h  SDL_quit.h  SDL_rect.h  SDL_render.h  (+15 more)
win/: CMakeLists.txt
win/include/: PositionComponent.h  SDLRendererAdapter.h
win/src/: MoverSystem.cpp  PrinterSystem.cpp  SDLRendererAdapter.cpp  roosevelt.cpp
